--- a/mysite/uwsgi.ini
+++ b/mysite/uwsgi.ini
@@ -6,4 +6,4 @@ socket = 0.0.0.0:8000
 master = true
 processes = 10
 chown-socket = www-data:www-data
-env = DJANGO_SETTINGS_MODULE=mysite.settings
+buffer-size = 32768
